--- a/src/layouts/css/home.css
+++ b/src/layouts/css/home.css
@@ -27,16 +27,15 @@
     /* Set rules to fill background */
     min-height: 100%;
     min-width: 1024px;
-    
+
     /* Set up proportionate scaling */
     width: 100%;
     height: auto;
-    
+
     /* Set up positioning */
     position: fixed;
     top: 0;
     left: 0;
-    margin-top: -8em;
 }
 
 @media screen and (max-width: 1500px) and (min-width: 1025px) { /* Specific to this particular image */
@@ -55,10 +54,10 @@
 }
 
 .image-overlay {
-  background: 
-    /* top, transparent red, faked with gradient */ 
+  background:
+    /* top, transparent red, faked with gradient */
     linear-gradient(
-      rgba(247, 244, 244, 0.95), 
+      rgba(247, 244, 244, 0.95),
       rgba(243, 228, 228, 0.05)
     );
   min-width: 100%;
